feat: add tamil department and OTP  mail

--- a/config.env
+++ b/config.env
@@ -5,5 +5,5 @@ NODE_ENV=development
 SECRET_STR=will-of-fire
 LOGIN_EXPIRES=10000000
 NODE_MAIL_USER=kpguru2405@gmail.com
-NODE_MAIL_PASS=bpma tqga cczp vfxi
+NODE_MAIL_PASS=gexepodmqgecggge
 
