feat: connect to mongoDB atles

--- a/config.env
+++ b/config.env
@@ -1,6 +1,12 @@
 PORT=3501
 USER=admin
 LOCAL_DB=mongodb://localhost:27017/
+REMOTE_CS_DB=mongodb+srv://admin:guru%402005@cluster0.zd8ibuy.mongodb.net/cs_db?retryWrites=true&w=majority&appName=Cluster0
+REMOTE_BCA_DB=mongodb+srv://admin:guru%402005@cluster0.zd8ibuy.mongodb.net/bca_db?retryWrites=true&w=majority&appName=Cluster0
+REMOTE_TAMIL_DB=mongodb+srv://admin:guru%402005@cluster0.zd8ibuy.mongodb.net/tamil_db?retryWrites=true&w=majority&appName=Cluster0
+REMOTE_LIBRARY_DB=mongodb+srv://admin:guru%402005@cluster0.zd8ibuy.mongodb.net/library_db?retryWrites=true&w=majority&appName=Cluster0
+REMOTE_ADMIN_DB=mongodb+srv://admin:guru%402005@cluster0.zd8ibuy.mongodb.net/admin_db?retryWrites=true&w=majority&appName=Cluster0
+
 NODE_ENV=development
 SECRET_STR=will-of-fire
 LOGIN_EXPIRES=10000000
